logs/django-presence.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cent'...
Listing './lib/python3.5/site-packages/cent-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/django_instant-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/django_presence-0.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/instant'...
Listing './lib/python3.5/site-packages/instant/go'...
Listing './lib/python3.5/site-packages/instant/go/src'...
Listing './lib/python3.5/site-packages/instant/management'...
Listing './lib/python3.5/site-packages/instant/management/commands'...
Listing './lib/python3.5/site-packages/instant/migrations'...
Listing './lib/python3.5/site-packages/instant/static'...
Listing './lib/python3.5/site-packages/instant/static/instant'...
Listing './lib/python3.5/site-packages/instant/static/instant/css'...
Listing './lib/python3.5/site-packages/instant/static/instant/frontend'...
Listing './lib/python3.5/site-packages/instant/static/instant/frontend/css'...
Listing './lib/python3.5/site-packages/instant/static/instant/frontend/js'...
Listing './lib/python3.5/site-packages/instant/static/instant/js'...
Listing './lib/python3.5/site-packages/instant/templates'...
Listing './lib/python3.5/site-packages/instant/templates/instant'...
Listing './lib/python3.5/site-packages/instant/templates/instant/channels'...
Listing './lib/python3.5/site-packages/instant/templates/instant/channels/staff'...
Listing './lib/python3.5/site-packages/instant/templates/instant/channels/superuser'...
Listing './lib/python3.5/site-packages/instant/templates/instant/channels/users'...
Listing './lib/python3.5/site-packages/instant/templates/instant/events'...
Listing './lib/python3.5/site-packages/instant/templates/instant/frontend'...
Listing './lib/python3.5/site-packages/instant/templates/instant/handlers'...
Listing './lib/python3.5/site-packages/instant/templates/instant/js'...
Listing './lib/python3.5/site-packages/instant/templatetags'...
Compiling './lib/python3.5/site-packages/instant/templatetags/__init__.py'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/presence'...
Listing './lib/python3.5/site-packages/presence/go'...
Listing './lib/python3.5/site-packages/presence/go/src'...
Listing './lib/python3.5/site-packages/presence/management'...
Listing './lib/python3.5/site-packages/presence/management/commands'...
Listing './lib/python3.5/site-packages/presence/migrations'...
Compiling './lib/python3.5/site-packages/presence/tasks.py'...
***   File "./lib/python3.5/site-packages/presence/tasks.py", line 24
    print "Updating presence"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/presence/templates'...
Listing './lib/python3.5/site-packages/presence/templates/presence'...
Listing './lib/python3.5/site-packages/presence/templates/presence/js'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
